BSD4: unit test and package

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include bosch_line_detection/schema.sql
-graft bosch_line_detection/static
-graft bosch_line_detection/templates
+include line_detector/schema.sql
+graft line_detector/static
+graft line_detector/templates
 global-exclude *.pyc
